plugins {
    id 'base'
    id 'checkstyle'
    id 'com.github.spotbugs' version '5.1.3'
}

group 'com.wso2'
version '0.1.0-SNAPSHOT'

// Configure repositories for all subprojects
allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url = 'https://maven.wso2.org/nexus/content/repositories/orgballerinalang-1614'
        }
        maven {
            url = 'https://maven.pkg.github.com/ballerina-platform/*'
            credentials {
                username System.getenv("packageUser")
                password System.getenv("packagePAT")
            }
        }
    }
}

// Configure Java toolchain for all subprojects
subprojects {
    apply plugin: 'java'
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }
}



build {
    dependsOn "common:build"
    dependsOn "mule:build"
    dependsOn "tibco:build"
    dependsOn "cli-mule:build"
    dependsOn "cli-tibco:build"
}

// Convenience task to publish the common library to Maven local
task publishCommonLibrary {
    group = 'publishing'
    description = 'Publishes the common library to Maven local repository'
    dependsOn ':common:publishToMavenLocal'
}
